apps/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  labels:
    name: prowlarr
spec:
  tls:
    - hosts:
        - prowlarr.internal.vkolobara.com
  rules:
    - host: prowlarr.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
